# ChangeLog for sci-biology/phylip
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/phylip/ChangeLog,v 1.32 2008/06/29 08:24:01 tove Exp $

  29 Jun 2008; Torsten Veller <tove@gentoo.org> phylip-3.65-r1.ebuild,
  phylip-3.66.ebuild, phylip-3.67.ebuild:
  Add missing die: || "..." -> || die "..."

  17 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> phylip-3.67.ebuild:
  amd64 stable, bug #207095

  16 Feb 2008; Markus Meier <maekke@gentoo.org> phylip-3.67.ebuild:
  x86 stable, bug #207095

  15 Feb 2008; nixnut <nixnut@gentoo.org> phylip-3.67.ebuild:
  Stable on ppc wrt bug 207095

  07 Feb 2008; Fabian Groffen <grobian@gentoo.org> phylip-3.65-r1.ebuild,
  phylip-3.66.ebuild, phylip-3.67.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*phylip-3.67 (19 Sep 2007)

  19 Sep 2007; Olivier Fisette <ribosome@gentoo.org> files/README.Gentoo,
  +phylip-3.67.ebuild:
  New upstream version. (Thanks to Arfrever Frehtes Taifersar Arahesis
  <arfrever.fta@gmail.com> for reporting. See bug #191869)

  30 Aug 2007; Olivier Fisette <ribosome@gentoo.org> phylip-3.66.ebuild:
  Added to ~amd64.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  phylip-3.65-r1.ebuild, phylip-3.66.ebuild:
  Drop virtual/x11 references.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

*phylip-3.66 (13 Sep 2006)

  13 Sep 2006; Olivier Fisette <ribosome@gentoo.org> +phylip-3.66.ebuild:
  New upstream version.

  02 Feb 2006; Olivier Fisette <ribosome@gentoo.org> phylip-3.65-r1.ebuild:
  Ported to modular X.

  21 Jan 2006; Olivier Fisette <ribosome@gentoo.org> -phylip-3.64.ebuild:
  Removed obsolete version.

  21 Jan 2006; Hasan Khalil <gongloo@gentoo.org> phylip-3.64.ebuild:
  Dropping ppc-macos stable keyword as a result of X11 bug(s). #115468

  23 Dec 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  phylip-3.65-r1.ebuild:
  Marked ppc stable, #115468
