@@ -1,6 +1,11 @@
 # ChangeLog for sci-biology/phylip
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/phylip/ChangeLog,v 1.32 2008/06/29 08:24:01 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/phylip/ChangeLog,v 1.33 2008/08/26 19:29:53 ribosome Exp $
+
+*phylip-3.68 (26 Aug 2008)
+
+  26 Aug 2008; Olivier Fisette <ribosome@gentoo.org> +phylip-3.68.ebuild:
+  New upstream version.
 
   29 Jun 2008; Torsten Veller <tove@gentoo.org> phylip-3.65-r1.ebuild,
   phylip-3.66.ebuild, phylip-3.67.ebuild:
